# id-card-rust

./: Cargo.toml  LICENSE  README.md
benches/: benchmark.rs
src/: lib.rs
src/region/: mod.rs  region_map.rs
tests/: tests.rs
