[package]
name = "cn-id-card"
version = "0.1.0"
authors = ["cstkingkey <cstkingkey@gmail.com>"]
edition = "2021"
description = "Chinese identification card number verification, including region code, birthday, and check code."
repository = "https://github.com/cstkingkey/id-card-rust.git"
readme = "README.md"
keywords = ["idcard", "id-card-number", "identification", "number"]
license = "Apache-2.0"
include = [
    "src/lib.rs",
    "src/region/mod.rs",
    "src/region/region_map.rs",
    "tests/*.rs",
    "Cargo.toml",
]

[dependencies]
regex="1"
lazy_static = "1.4.0"
#rand = "0.8"
chrono = "0.4"
