[package]
name = "cn-id-card"
version = "0.1.3"
authors = ["cstkingkey <cstkingkey@gmail.com>"]
edition = "2021"
description = "Chinese identification card number verification, including region code, birthday, and check code."
repository = "https://github.com/cstkingkey/id-card-rust.git"
readme = "README.md"
keywords = ["idcard", "id-card-number", "identification", "number"]
license = "Apache-2.0"

[dependencies]
regex="1"
lazy_static = { version = "1.4.0", optional = true }
#rand = "0.8"
chrono = "0.4"

[features]
region = ["lazy_static"]
default = ["region"]
