[package]
name = "cn-id-card"
version = "0.1.5"
authors = ["cstkingkey <cstkingkey@gmail.com>"]
edition = "2021"
description = "Chinese identification card number verification, including region code, birthday, and check code."
repository = "https://github.com/cstkingkey/id-card-rust.git"
readme = "README.md"
keywords = ["idcard", "id-card-number", "identification", "number"]
license = "Apache-2.0"

[dependencies]
regex= "1"
once_cell = "1.9"
#rand = "0.8"
chrono = "0.4"

[features]
region = []
default = ["region"]
